unpackaged/main/default/objects/Membership__c/Membership__c.object-meta.xml
<CustomObject>
    <label>Membership</label>
    <nameField>
        <displayFormat>MBR-{000000}</displayFormat>
        <label>Membership Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Memberships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>