unpackaged/main/default/objects/Membership__c/fields/Expiration_Notice__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Notice__c</fullName>
    <defaultValue>60</defaultValue>
    <label>Expiration Notice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>