unpackaged/main/default/objects/Membership__c/fields/Household_Account__c.field-meta.xml
<CustomField>
    <fullName>Household_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Household Account that the Membership relates to, if appropriate</description>
    <inlineHelpText>The Household Account that the Membership relates to (Optional)</inlineHelpText>
    <label>Household Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Household Memberships</relationshipLabel>
    <relationshipName>HouseholdMemberships</relationshipName>
    <type>Lookup</type>
</CustomField>