unpackaged/main/default/objects/Membership__c/fields/Membership_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Membership_Term_Months__c</fullName>
    <label>Membership Term (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>