unpackaged/main/default/objects/Membership__c/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Organisation Account that the Membership relates to, if appropriate</description>
    <inlineHelpText>The Organisation Account that the Membership relates to (optional)</inlineHelpText>
    <label>Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Organisation Memberships</relationshipLabel>
    <relationshipName>Memberships2</relationshipName>
    <type>Lookup</type>
</CustomField>